update jsui and sample code

--- a/sample/manager.html
+++ b/sample/manager.html
@@ -3,9 +3,9 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <script src="/src/menu.js"></script>
-        <script src="/src/table.js"></script>
-        <script src="/src/notify.js"></script>
+        <script src="/ui/menu.js"></script>
+        <script src="/ui/table.js"></script>
+        <script src="/ui/notify.js"></script>
         <script src="manager.js"></script>
     </body>
 </html>
