update draggable and sample

--- a/sample/manager.html
+++ b/sample/manager.html
@@ -3,9 +3,14 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <div id="dropzone">
+            <input id="filereader" type="file" accept="json">
+        </div>
         <script src="/ui/menu.js"></script>
         <script src="/ui/table.js"></script>
         <script src="/ui/notify.js"></script>
+        <script src="/js/filereader.js"></script>
+        <script src="/js/draggable.js"></script>
         <script src="manager.js"></script>
     </body>
 </html>
