--- a/sample/manager.html
+++ b/sample/manager.html
@@ -9,8 +9,8 @@
         <script src="/ui/menu.js"></script>
         <script src="/ui/table.js"></script>
         <script src="/ui/notify.js"></script>
+        <script src="/ui/dragdrop.js"></script>
         <script src="/js/filereader.js"></script>
-        <script src="/js/draggable.js"></script>
         <script src="manager.js"></script>
     </body>
 </html>
