Update sample code

--- a/sample/manager.html
+++ b/sample/manager.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div id="dropzone">
-            <input id="filereader" type="file" accept="json">
+            <input id="filereader" type="file" accept=".json">
         </div>
         <script src="/ui/menu.js"></script>
         <script src="/ui/table.js"></script>
