--- a/sample/manager.html
+++ b/sample/manager.html
@@ -6,11 +6,11 @@
         <div id="dropzone">
             <input id="filereader" type="file" accept=".json">
         </div>
-        <script src="/ui/menu.js"></script>
-        <script src="/ui/table.js"></script>
-        <script src="/ui/notify.js"></script>
-        <script src="/ui/dragdrop.js"></script>
-        <script src="/js/filereader.js"></script>
+        <script src="/jslib/ui/menu.js"></script>
+        <script src="/jslib/ui/table.js"></script>
+        <script src="/jslib/ui/notify.js"></script>
+        <script src="/jslib/ui/dragdrop.js"></script>
+        <script src="/jslib/js/filereader.js"></script>
         <script src="manager.js"></script>
     </body>
 </html>
