--- a/sample/manager.html
+++ b/sample/manager.html
@@ -5,6 +5,11 @@
     <body>
         <div id="dropzone">
             <input id="filereader" type="file" accept=".json">
+            <select>
+                <option value="1">Option 1</option>
+                <option value="2">选项 1</option>
+                <option value="3">オプション 3</option>
+            </select>
         </div>
         <script src="/jslib/ui/menu.js"></script>
         <script src="/jslib/ui/table.js"></script>
