--- a/manager/aria2.html
+++ b/manager/aria2.html
@@ -5,7 +5,7 @@
         <title i18n>extension_manager</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="aria2.css">
-        <script src="/jslib/js/aria2.js"></script>
+        <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
     <body>
         <div class="flex" data-main="3">
@@ -60,76 +60,71 @@
             </div>
             <div id="more">
                 <div class="flex">
-                    <div title="popup_download_title">
+                    <div>
                         <div class="title" i18n>popup_download</div>
                         <div>
                             <input name="max-download-limit" type="text">
                         </div>
                     </div>
-                    <div title="popup_upload_title">
+                    <div>
+                        <div class="title" i18n>aria2_proxy</div>
+                        <div class="fixed">
+                            <input name="all-proxy" type="url">
+                            <button id="proxy_btn">🔖</button>
+                        </div>
+                    </div>
+                    <div data-bt>
                         <div class="title" i18n>popup_upload</div>
                         <div>
                             <input name="max-upload-limit" type="text">
                         </div>
                     </div>
                 </div>
-                <div title="aria2_proxy_title">
-                    <div class="title" i18n>aria2_proxy</div>
-                    <div class="fixed">
-                        <input name="all-proxy" type="url">
-                        <button id="proxy_btn">🔖</button>
-                    </div>
-                </div>
                 <div class="flex" data-http>
-                    <div title="aria2_http_split_title">
+                    <div>
                         <div class="title" i18n>aria2_http_split</div>
                         <div>
                             <input name="split" type="number">
                         </div>
-                        <span i18n>common_default</span>: <u><i>5</i></u>
                     </div>
-                    <div title="aria2_http_size_title">
+                    <div>
                         <div class="title" i18n>aria2_http_size</div>
                         <div>
                             <input name="min-split-size" type="text">
                             <span class="float">B</span>
                         </div>
-                        <span i18n>common_default</span>: <u><i>20M</i></u>
                     </div>
                 </div>
                 <div class="flex" data-bt>
-                    <div title="aria2_bt_ratio_title">
+                    <div>
                         <div class="title" i18n>aria2_bt_ratio</div>
                         <div>
                             <input name="seed-ratio" type="number" min="0" step="0.1">
                         </div>
-                        <span i18n>common_default</span>: <u><i>1.0</i></u>
                     </div>
-                    <div title="aria2_bt_seed_title">
+                    <div>
                         <div class="title" i18n>aria2_bt_seed</div>
                         <div>
                             <input name="seed-time" type="number">
                             <span class="float" i18n>time_minute_full</span>
                         </div>
-                        <span i18n>common_default</span>: <u><i>30</i></u>
                     </div>
-                </div>
-                <div title="aria2_bt_remove_title" data-bt>
-                    <div class="title" i18n>aria2_bt_remove</div>
                     <div>
-                        <select name="bt-remove-unselected-file">
-                            <option value="true" i18n>aria2_true</option>
-                            <option value="false" i18n>aria2_false</option>
-                        </select>
+                        <div class="title" i18n>aria2_bt_remove</div>
+                        <div>
+                            <select name="bt-remove-unselected-file">
+                                <option value="true" i18n>aria2_true</option>
+                                <option value="false" i18n>aria2_false</option>
+                            </select>
+                        </div>
                     </div>
-                    <span i18n>common_default</span>: <u><i i18n>aria2_false</i></u>
                 </div>
-                <div title="aria2_files_title">
+                <div>
                     <div class="title" i18n>aria2_files</div>
                     <div id="files"></div>
                     <button id="save_btn" class="float" style="display: none;" i18n>aria2_save</button>
                 </div>
-                <div title="aria2_urls_title" data-http>
+                <div data-http>
                     <div class="title" i18n>aria2_urls</div>
                     <div class="fixed">
                         <input type="url">
