--- a/manager/aria2.html
+++ b/manager/aria2.html
@@ -50,7 +50,7 @@
             <div>📶️ <span id="connect"></span></div>
             <div>⏬ <span id="download"></span></div>
             <div>⏫ <span id="upload"></span></div>
-            <div id="manage">
+            <div id="menus">
                 <button id="remove_btn">❌</button>
                 <button id="invest_btn">🔍</button>
                 <button id="retry_btn">🌌</button>
@@ -58,7 +58,7 @@
             <div id="meter">
                 <div id="ratio"></div>
             </div>
-            <div id="more">
+            <div id="options">
                 <div class="flex">
                     <div>
                         <div class="title" i18n>popup_download</div>
