--- a/manager/aria2.html
+++ b/manager/aria2.html
@@ -61,7 +61,7 @@
             <div id="options">
                 <div class="flex">
                     <div>
-                        <div class="title" i18n>popup_download</div>
+                        <div class="title" i18n>aria2_download</div>
                         <div>
                             <input name="max-download-limit" type="text">
                         </div>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div data-bt>
-                        <div class="title" i18n>popup_upload</div>
+                        <div class="title" i18n>aria2_upload</div>
                         <div>
                             <input name="max-upload-limit" type="text">
                         </div>
