--- a/manager/aria2.html
+++ b/manager/aria2.html
@@ -8,7 +8,7 @@
         <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
     <body>
-        <div class="tools" data-main="3">
+        <div class="tools">
             <div>
                 <button class="active" i18n>popup_active</button>
                 <span id="active" class="stats">0</span>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <hr>
-        <div id="session" data-main="3">
+        <div id="session">
             <div data-queue="active"></div>
             <div data-queue="waiting"></div>
             <div data-queue="paused"></div>
@@ -74,7 +74,7 @@
                             <input name="max-download-limit" type="text">
                         </div>
                     </div>
-                    <div>
+                    <div data-http>
                         <div class="title" i18n>aria2_proxy</div>
                         <div class="fixed">
                             <input name="all-proxy" type="url">
