--- a/manager/aria2.html
+++ b/manager/aria2.html
@@ -130,7 +130,7 @@
                 <div>
                     <div class="title" i18n>aria2_files</div>
                     <div id="files"></div>
-                    <button id="save_btn" class="float" style="display: none;" i18n>aria2_save</button>
+                    <button id="save_btn" class="float" i18n>aria2_save</button>
                 </div>
                 <div data-http>
                     <div class="title" i18n>aria2_urls</div>
