--- a/manager/index.html
+++ b/manager/index.html
@@ -64,9 +64,8 @@
                     </div>
                     <div data-http>
                         <div class="title" i18n>aria2_proxy</div>
-                        <div class="fixed">
+                        <div>
                             <input name="all-proxy" type="url">
-                            <button id="proxy_btn">🔖</button>
                         </div>
                     </div>
                     <div data-bt>
