--- a/sample/sample.html
+++ b/sample/sample.html
@@ -16,6 +16,6 @@
         <script src="/jslib/ui/notify.js"></script>
         <script src="/jslib/ui/dragdrop.js"></script>
         <script src="/jslib/js/filereader.js"></script>
-        <script src="manager.js"></script>
+        <script src="sample.js"></script>
     </body>
 </html>
