--- a/manager/index.html
+++ b/manager/index.html
@@ -68,7 +68,7 @@
                             <input name="all-proxy" type="url">
                         </div>
                     </div>
-                    <div class="menu" data-bt>
+                    <div class="menu" data-p2p>
                         <div class="title" i18n>aria2_upload</div>
                         <div>
                             <input name="max-upload-limit" type="text">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex" data-bt>
+                <div class="flex" data-p2p>
                     <div class="menu">
                         <div class="title" i18n>aria2_bt_ratio</div>
                         <div>
