--- a/sample/sample.html
+++ b/sample/sample.html
@@ -11,10 +11,9 @@
                 <option value="3">オプション 3</option>
             </select>
         </div>
-        <script src="/jslib/ui/menu.js"></script>
         <script src="/jslib/ui/table.js"></script>
-        <script src="/jslib/ui/notify.js"></script>
         <script src="/jslib/ui/dragdrop.js"></script>
+        <script src="/jslib/js/jsui.js"></script>
         <script src="/jslib/js/filereader.js"></script>
         <script src="sample.js"></script>
     </body>
