--- a/manager/index.html
+++ b/manager/index.html
@@ -7,29 +7,19 @@
         <link rel="stylesheet" href="main.css">
         <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
-    <body>
-        <div class="flex">
-            <div>
-                <button id="active_btn" i18n>popup_active</button>
-                <span id="active" class="stats">0</span>
-                <button id="waiting_btn" i18n>popup_waiting</button>
-                <span id="waiting" class="stats">0</span>
-                <button id="stopped_btn" i18n>popup_stopped</button>
-                <span id="stopped" class="stats">0</span>
-            </div>
-            <div>
-                <div class="download" i18n>popup_download</div>
-                <span id="download" class="stats">0</span>
-                <div class="upload" i18n>popup_upload</div>
-                <span id="upload" class="stats">0</span>
-            </div>
-            <div style="text-align: right;">
-                <button id="download_btn" i18n>popup_create</button>
-                <button id="purge_btn" i18n>popup_purge</button>
-                <button id="options_btn" i18n>popup_options</button>
-            </div>
+    <body class="full">
+        <div id="array">
+            <button id="active_btn" i18n>popup_active</button>
+            <span id="active" class="stats">0</span>
+            <button id="waiting_btn" i18n>popup_waiting</button>
+            <span id="waiting" class="stats">0</span>
+            <button id="stopped_btn" i18n>popup_stopped</button>
+            <span id="stopped" class="stats">0</span>
         </div>
-        <hr>
+        <div id="menu">
+            <button id="download_btn" i18n>popup_create</button>
+            <button id="purge_btn" i18n>popup_purge</button>
+        </div>
         <div id="queue">
             <div class="active"></div>
             <div class="waiting"></div>
@@ -37,6 +27,15 @@
             <div class="complete"></div>
             <div class="removed"></div>
             <div class="error"></div>
+        </div>
+        <div id="speed">
+            <div class="download" i18n>popup_download</div>
+            <span id="download" class="stats">0</span>
+            <div class="upload" i18n>popup_upload</div>
+            <span id="upload" class="stats">0</span>
+        </div>
+        <div id="tool">
+            <button id="options_btn" i18n>popup_options</button>
         </div>
         <div class="session">
             <div id="name" class="title"></div>
