--- a/manager/index.html
+++ b/manager/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="main.css">
         <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
-    <body class="array3 extend">
-        <div id="status">
+    <body class="extend">
+        <div id="stats">
             <button id="active_btn" i18n>popup_active</button>
             <span id="active" class="stats">0</span>
             <button id="waiting_btn" i18n>popup_waiting</button>
