--- a/manager/index.html
+++ b/manager/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="main.css">
         <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
-    <body class="extend">
+    <body class="full">
         <div id="stats">
             <button id="active_btn" i18n>popup_active</button>
             <span id="active" class="stats">0</span>
