--- a/sample/sample.html
+++ b/sample/sample.html
@@ -4,9 +4,8 @@
     </head>
     <body>
         <div id="dropzone">
-            <div>
-                <input id="filereader" type="file" accept=".json">
-            </div>
+            <input id="filereader" type="file" accept=".json">
+            <textarea id="reader" rows="8" disabled></textarea>
         </div>
         <div class="url">
             <input id="url" type="url"><input id="submit" type="submit">
