--- a/sample/sample.html
+++ b/sample/sample.html
@@ -7,15 +7,16 @@
             <input id="filereader" type="file" accept=".json">
             <textarea id="reader" rows="8" disabled></textarea>
         </div>
-        <template>
+        <div class="template">
             <div>
                 <label></label><input disabled>
             </div>
-        </template>
-        <div class="url">
+        </div>
+        <div id="urlcomponents">
             <div>
                 <input id="url" type="url"><button id="submit">Submit</button>
             </div>
+            <div class="result"></result>
         </div>
         <script src="/jslib/js/jsui.js"></script>
         <script src="/jslib/js/url.js"></script>
