--- a/manager/index.html
+++ b/manager/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title i18n>extension_manager</title>
-        <link rel="stylesheet" href="lib.css">
+        <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/res/css/common.css">
         <link rel="stylesheet" href="main.css">
-        <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
     </head>
     <body class="full">
         <div id="stats">
@@ -141,8 +140,9 @@
                 <div id="ratio"></div>
             </div>
         </div>
+        <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
+        <script src="https://jc3213.github.io/download_with_aria2/chromium/res/js/common.js"></script>
         <script src="i18n.js"></script>
-        <script src="lib.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
