--- a/sample/sample.html
+++ b/sample/sample.html
@@ -18,7 +18,8 @@
             </div>
             <div class="result"></result>
         </div>
-        <script src="/jslib/js/jsui.js"></script>
+        <script src="/jslib/ui/jsui.js"></script>
+        <script src="/jslib/ui/jsui_extend.js"></script>
         <script src="/jslib/js/url.js"></script>
         <script src="/jslib/js/filereader.js"></script>
         <script src="sample.js"></script>
