--- a/manager/index.html
+++ b/manager/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title i18n>extension_manager</title>
         <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/pages/common.css">
+        <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body class="full">
