--- a/manager/index.html
+++ b/manager/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title i18n>extension_manager</title>
-        <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/pages/common.css">
-        <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jc3213/download_with_aria2@main/chromium/pages/common.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jc3213/download_with_aria2@main/chromium/pages/popup/popup.css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body class="full">
@@ -143,8 +143,8 @@
                 <div id="ratio"></div>
             </div>
         </div>
-        <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
-        <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/jc3213/jslib@main/js/aria2.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/jc3213/download_with_aria2@main/chromium/pages/popup/popup.js"></script>
         <script src="i18n.js"></script>
         <script src="main.js"></script>
     </body>
