--- a/manager/index.html
+++ b/manager/index.html
@@ -36,6 +36,24 @@
             <div class="upload" i18n>popup_upload</div>
             <span id="upload" class="stats">0</span>
         </div>
+        <div id="settings">
+            <div class="menu">
+                <div class="title" i18n>option_jsonrpc_uri</div>
+                <input id="jsonrpc_uri" type="url">
+            </div>
+            <div class="menu">
+                <div class="title" i18n>option_jsonrpc_token</div>
+                <input id="jsonrpc_token" type="text" placeholder="$$secret$$">
+            </div>
+            <div class="menu">
+                <label class="title" i18n>option_manager_interval</label>
+                <input id="manager_interval" type="number" min="5000" max="30000" step="1000">
+            </div>
+            <div class="menu">
+                <div class="title" i18n>option_proxy_server</div>
+                <input id="proxy_server" type="url" placeholder="http://127.0.0.1:1280/">
+            </div>
+        </div>
         <div class="template">
             <div class="session">
                 <div id="name" class="title"></div>
