--- a/sample/sample.html
+++ b/sample/sample.html
@@ -19,6 +19,7 @@
             <div class="result"></result>
         </div>
         <script src="/jslib/ui/jsui.js"></script>
+        <script src="/jslib/ui/jsui.max.js"></script>
         <script src="/jslib/js/url.js"></script>
         <script src="/jslib/js/filereader.js"></script>
         <script src="sample.js"></script>
