--- a/manager/index.html
+++ b/manager/index.html
@@ -9,32 +9,26 @@
     </head>
     <body class="full">
     <body>
-        <div id="stat">
-            <button id="active_btn" i18n>popup_active</button>
-            <span id="active" class="stats">0</span>
-            <button id="waiting_btn" i18n>popup_waiting</button>
-            <span id="waiting" class="stats">0</span>
-            <button id="stopped_btn" i18n>popup_stopped</button>
-            <span id="stopped" class="stats">0</span>
-        </div>
         <div id="menu">
-            <button id="download_btn" i18n>popup_create</button>
+            <button id="queue_btn" i18n>popup_queue</button>
+            <button id="download_btn" i18n>popup_newdld</button>
             <button id="purge_btn" i18n>popup_purge</button>
             <button id="options_btn" i18n>popup_options</button>
         </div>
-        <div id="queue">
-            <div class="active"></div>
-            <div class="waiting"></div>
-            <div class="paused"></div>
-            <div class="complete"></div>
-            <div class="removed"></div>
-            <div class="error"></div>
+        <div id="choose">
+            <div id="active"><span>✔️</span><span i18n>popup_active</span></div>
+            <div id="waiting"><span>✔️</span><span i18n>popup_waiting</span></div>
+            <div id="paused"><span>✔️</span><span i18n>popup_paused</span></div>
+            <div id="complete"><span>✔️</span><span i18n>popup_complete</span></div>
+            <div id="removed"><span>✔️</span><span i18n>popup_removed</span></div>
+            <div id="error"><span>✔️</span><span i18n>popup_error</span></div>
         </div>
-        <div id="speed">
-            <div class="download" i18n>popup_download</div>
-            <span id="download" class="stats">0</span>
-            <div class="upload" i18n>popup_upload</div>
-            <span id="upload" class="stats">0</span>
+        <div id="status">
+            <div title="popup_active_queue"><span i18n>popup_active_queue</span><span id="active">0</span></div>
+            <div title="popup_waiting_queue"><span i18n>popup_waiting_queue</span><span id="waiting">0</span></div>
+            <div title="popup_stopped_queue"><span i18n>popup_stopped_queue</span><span id="stopped">0</span></div>
+            <div title="popup_download_speed"><span i18n>popup_download_speed</span><span id="download">0</span></div>
+            <div title="popup_upload_speed"><span i18n>popup_upload_speed</span><span id="upload">0</span></div>
         </div>
         <div id="settings">
             <div class="menu">
@@ -53,6 +47,15 @@
                 <div class="title" i18n>option_proxy_server</div>
                 <input id="proxy_server" type="url" placeholder="http://127.0.0.1:1280/">
             </div>
+        </div>
+        <hr>
+        <div id="queue">
+            <div id="active"></div>
+            <div id="waiting"></div>
+            <div id="paused"></div>
+            <div id="complete"></div>
+            <div id="removed"></div>
+            <div id="error"></div>
         </div>
         <div class="template">
             <div class="session">
