--- a/manager/index.html
+++ b/manager/index.html
@@ -9,12 +9,17 @@
     </head>
     <body class="full">
     <body>
-        <div id="menu">
-            <button id="queue_btn" i18n>popup_queue</button>
-            <button id="download_btn" i18n>popup_newdld</button>
-            <button id="purge_btn" i18n>popup_purge</button>
-            <button id="options_btn" i18n>popup_options</button>
+        <button id="download_btn" i18n>popup_newdld</button>
+        <button id="queue_btn" i18n>popup_queue</button>
+        <div id="status">
+            <div title="popup_active_queue"><span i18n>popup_active_queue</span><span id="active">0</span></div>
+            <div title="popup_waiting_queue"><span i18n>popup_waiting_queue</span><span id="waiting">0</span></div>
+            <div title="popup_stopped_queue"><span i18n>popup_stopped_queue</span><span id="stopped">0</span></div>
+            <div title="popup_download_speed"><span i18n>popup_download_speed</span><span id="download">0</span></div>
+            <div title="popup_upload_speed"><span i18n>popup_upload_speed</span><span id="upload">0</span></div>
         </div>
+        <button id="purge_btn" i18n>popup_purge</button>
+        <button id="options_btn" i18n>popup_options</button>
         <div id="choose">
             <div id="active"><span>✔️</span><span i18n>popup_active</span></div>
             <div id="waiting"><span>✔️</span><span i18n>popup_waiting</span></div>
@@ -22,13 +27,6 @@
             <div id="complete"><span>✔️</span><span i18n>popup_complete</span></div>
             <div id="removed"><span>✔️</span><span i18n>popup_removed</span></div>
             <div id="error"><span>✔️</span><span i18n>popup_error</span></div>
-        </div>
-        <div id="status">
-            <div title="popup_active_queue"><span i18n>popup_active_queue</span><span id="active">0</span></div>
-            <div title="popup_waiting_queue"><span i18n>popup_waiting_queue</span><span id="waiting">0</span></div>
-            <div title="popup_stopped_queue"><span i18n>popup_stopped_queue</span><span id="stopped">0</span></div>
-            <div title="popup_download_speed"><span i18n>popup_download_speed</span><span id="download">0</span></div>
-            <div title="popup_upload_speed"><span i18n>popup_upload_speed</span><span id="upload">0</span></div>
         </div>
         <div id="settings">
             <div class="menu">
@@ -59,7 +57,7 @@
         </div>
         <div class="template">
             <div class="session">
-                <div id="name" class="title"></div>
+                <div id="title" class="title"></div>
                 <div>🖥️ <span id="local"></span></div>
                 <div>⏲️ <span id="day"></span><span id="hour"></span><span id="minute"></span><span id="second"></span><span id="infinite">∞</span></div>
                 <div>📦 <span id="remote"></span></div>
@@ -165,8 +163,8 @@
             </div>
         </div>
         <script src="https://jc3213.github.io/jslib/js/aria2.js"></script>
-        <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
         <script src="i18n.js"></script>
+        <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
